--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,7 @@
   .map
     width: 48%
   .activites
-    &__cards
+    &-card
       margin-right: 20px
   .footer
     &__input
@@ -45,7 +45,7 @@
   .activites
     &-wrapper
       flex-wrap: wrap
-    &__cards
+    &-card
       width: 49%
       margin-right: 0
       margin-bottom: 20px
@@ -170,7 +170,7 @@
   .activites
     &-wrapper
       flex-wrap: wrap
-    &__cards
+    &-card
       width: 49%
       margin-bottom: 20px
   .footer
@@ -194,7 +194,7 @@
       line-height: 23px
     &-wrapper
       flex-wrap: wrap
-    &__cards
+    &-card
       width: 100%
       margin-bottom: 20px
   .footer
